Closed Bug 1424680 Opened 7 years ago Closed 7 years ago

Fix oversight when addressing review comments in bug 1424094.

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox59 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

I should clearly not review on the morning...
Assignee: nobody → emilio
Component: CSS Parsing and Computation → Layout
Blocks: 1424094
Comment on attachment 8936214 [details]
Bug 1424680: Fix appending in some situations to display: contents stuff.

https://reviewboard.mozilla.org/r/206986/#review212798
Attachment #8936214 - Flags: review?(bzbarsky) → review+
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/ad65437497c1
Fix appending in some situations to display: contents stuff. r=bz
https://hg.mozilla.org/mozilla-central/rev/ad65437497c1
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: