Bug 1424680: Fix appending in some situations to display: contents stuff. r=bz

I've verified that this asserts without the patch.

MozReview-Commit-ID: 8j6x4xswrCe

--HG--
extra : rebase_source : 37ec24fc08b1f492e5d48e1323602b315c319fb4